src/test/deca/context/invalid/provided/invalide_18_ReadFloat.deca
// Description : L'initialisation d'une variable par une valeur de type différent du type de la variable.
// Sortie : 
// ERROR : On ne peut pas affectée à un type int un type float.

{
    int entier = readFloat();
}
